Fixed articles preview overflow

--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -292,7 +292,7 @@ footer h3 {
   /*Content section*/
 
   .content_article {
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
   }
 
   .content_article-fullsize {
